# GraphTS

./: .gitignore  CMakeLists.txt  Makefile  README.md  ToDo.md  a.txt  bun.lockb  graph  graph.cpp  main.cpp  package.json
cpp/: graph.cpp  main.cpp
data/: input.json
include/: colormod.hpp  dir_graph.hpp  errors.hpp  graph.hpp  load_data.hpp  und_graph.hpp
src/: Graph.ts  algorithms.cpp  dir_graph.cpp  errors.cpp  graph.cpp  index.ts  load_data.cpp  main.cpp  und_graph.cpp
ts/: Graph.ts  Interfaces.ts  index.ts
